<resources>
    <string name="app_name">NumSense</string>
    <string name="welcome_back">Welcome</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>

    \


    <string name="image_content_description">An owl sitting on a branch teaching math.</string>
    <string name="plus_sign">+</string>
    <string name="equal_sign">=</string>
    <string name="question_mark">\?</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_level">Level</string>
    <string name="menu_study">Study</string>
    <string name="advanced">Advanced</string>
    <string name="intermediate">Intermediate</string>
    <string name="menu_quiz">Quiz</string>
    <string name="practice">Practice</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="multiplication_by_11">Multiplication by 11</string>
    <string name="multiplication_by_25">Multiplication by 25</string>
    <string name="multiplication_by_75">Multiplication by 75</string>

    <string name="random">Random</string>
    <string name="profile">Profile</string>
    <string name="correct">Correct</string>
    <string name="total">Total</string>
    <string name="hub">Hub</string>

    <string name="time_to_study">Time to study.</string>


    <string name="practice_notification_channel_id" translatable="false">practice_channel</string>
    <string name="practice_notification_channel_name" translatable="true">Practice</string>
    <string name="enable_reminder_notification">Enable reminder notification</string>
    <string name="practice_reminder_notification_channel_description">Practice reminder</string>
    <string name="we_will_remind_you_at_1pm_daily_for_the_practicce">We will remind you at 1pm daily for the practicce.</string>
    <string name="notification">Notification</string>
    <string name="hi_welcome_user">Hi Welcome, User</string>
    <string name="beginner">Beginner</string>
    <string name="description">Description</string>
    <string name="storage">Storage</string>
    <string name="pdf">PDF</string>
    <string name="loif">LOIF</string>

</resources>
