<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F2F1"
    android:orientation="vertical"
    tools:context="quiz.ui.QuizFragment">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bodmas" />

    <LinearLayout
        android:id="@+id/linear_layout_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view">

        <TextView
            android:id="@+id/text_view_left_addend"
            style="@style/questionStyle"
            tools:text="19" />

        <TextView
            android:id="@+id/operator_type"
            style="@style/questionStyle"
            android:text="@string/plus_sign" />

        <TextView
            android:id="@+id/text_view_right_addend"
            style="@style/questionStyle"
            tools:text="91" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/equal_sign" />

        <TextView
            style="@style/questionStyle"
            android:text="@string/question_mark" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_question"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:minHeight="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_question"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/first_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/second_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/third_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/submit_button"
        style="@style/buttonStyle"
        android:text="@string/submit_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>