<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_2"
        android:layout_marginBottom="@dimen/margin_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/yellow"
                android:drawableTop="@drawable/ic_add"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="25dp"
                android:text="@string/addition"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button_sub"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_grey"
                android:drawableTop="@drawable/ic_subtract"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="25dp"
                android:text="@string/subtraction"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_random"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red_light"
            android:drawableLeft="@drawable/ic_bear"
            android:foreground="?attr/selectableItemBackground"
            android:minHeight="200dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:text="@string/random"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_mul"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/sea_green"
                android:drawableTop="@drawable/ic_multiply"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="25dp"
                android:text="@string/multiplication"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dull_blue"
                android:drawableTop="@drawable/ic_divide"
                android:paddingTop="25dp"
                android:text="@string/division"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_mul_by_11"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple"
                android:drawableTop="@drawable/ic_mul_eleven"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="25dp"
                android:text="@string/multiplication_by_11"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_mul_by_25"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/golden"
                android:drawableTop="@drawable/ic_mul_twenty_five"
                android:paddingTop="25dp"
                android:text="@string/multiplication_by_25"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/button_mul_by_75"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/aqua_green"
            android:minHeight="200dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_mul_seventy_five" />


        <ImageButton
            android:id="@+id/button_loif"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/bright_green"
            android:minHeight="200dp"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_loif" />

    </LinearLayout>
</ScrollView>
